# drone-middle

./: .gitignore  CMakeLists.txt  README.md
config/: params.yaml  ros_params.yaml
docs/: concept_design.md  contest_rule.md  development_status.md  drone_designv4.md  environment_preview.html  gazebo_prototype_spec.md  plan.md  setup_environment.md  templete.md
launch/: sim_full.launch.py  sim_gazebo.launch.py  sim_perception.launch.py  sim_planner.launch.py  sim_px4_full.launch.py  sim_record.launch.py
reports/: feedback.md  figure_validation_summary.md  first_round_technical_plan_draft.md  first_round_technical_plan_latex_draft.tex  first_round_technical_plan_summary.txt  gazebo_figure_data_summary.md  generate_report_figures.py  latest_gazebo_run.txt  marker_layout_sweep.csv  marker_layout_sweep_summary.md  phase1_speed_sweep.csv  phase1_speed_sweep_summary.md
scripts/: check_dev_env.sh  generate_report_extra_figures.py  gz_drone_sim.py  install_dev_env_ubuntu24.sh  mock_sensors.py  plot_from_bag.py  plot_mission_path.py  plot_phase1_search.py  run_headless_experiment.sh  run_micro_xrce_agent.sh  run_px4_sitl.sh  setup_px4_sitl.sh  sim_run.sh  test_coord_log.py  test_full_mission_log.py  validate_report_figures.py
src/aruco_tracker/: CMakeLists.txt  package.xml
src/aruco_tracker/include/aruco_tracker/: confidence_filter.hpp
src/aruco_tracker/src/: aruco_tracker_node.cpp  confidence_filter.cpp
src/aruco_tracker/test/: confidence_filter_test.cpp
src/grid_detector/: CMakeLists.txt  package.xml
src/grid_detector/include/grid_detector/: grid_geometry.hpp
src/grid_detector/src/: grid_detector_node.cpp  grid_geometry.cpp
src/grid_detector/test/: grid_geometry_test.cpp
src/mission_manager/: CMakeLists.txt  package.xml
src/mission_manager/include/mission_manager/: mission_core.hpp
src/mission_manager/src/: mission_core.cpp  mission_manager_node.cpp
src/mission_manager/test/: mission_core_test.cpp
src/px4_offboard_control/: CMakeLists.txt  package.xml
src/px4_offboard_control/include/px4_offboard_control/: control_core.hpp
src/px4_offboard_control/src/: control_core.cpp  px4_offboard_control_node.cpp
src/px4_offboard_control/test/: control_core_test.cpp
src/sprint_drone/: CMakeLists.txt  package.xml
src/sprint_drone/config/: bridge.yaml  bridge_px4.yaml
src/sprint_drone/launch/: sim_control.launch.py  sim_full.launch.py  sim_gazebo.launch.py  sim_mission.launch.py  sim_perception.launch.py  sim_planner.launch.py  sim_px4_full.launch.py
src/sprint_drone/models/aruco_textures/: model.config  model.sdf
src/sprint_drone/models/sprint_camera_rig/: model.config  model.sdf
src/sprint_drone/worlds/: sprint_grid_preview.sdf  sprint_grid_world.sdf
src/sprint_drone_msgs/: CMakeLists.txt  package.xml
src/sprint_drone_msgs/msg/: GridIntersections.msg  GridLines.msg  MarkerDetection.msg  MarkerDetectionList.msg  MarkerInfo.msg  MarkerList.msg  VelocityProfile.msg
src/sprint_planner/: CMakeLists.txt  package.xml
src/sprint_planner/include/sprint_planner/: time_cost.hpp
src/sprint_planner/src/: sprint_planner_node.cpp  time_cost.cpp
src/sprint_planner/test/: time_cost_test.cpp
src/vertiport_detector/: CMakeLists.txt  package.xml
src/vertiport_detector/include/vertiport_detector/: descent_filter.hpp
src/vertiport_detector/src/: descent_filter.cpp  vertiport_detector_node.cpp
src/vertiport_detector/test/: descent_filter_test.cpp
src/visual_odometry/: CMakeLists.txt  package.xml
src/visual_odometry/include/visual_odometry/: localization_core.hpp
src/visual_odometry/src/: localization_core.cpp  visual_odometry_node.cpp
src/visual_odometry/test/: localization_core_test.cpp
tools/: README.md  gen_aruco_markers.py  log_analyzer.py  make_px4_world.py  plot_mission.py  spawn_markers.py
