<?xml version="1.0"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.1.0</version>
  <description>Mission state machine for the GPS-denied sprint drone prototype.</description>
  <maintainer email="dev@example.com">sprint_drone</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sprint_drone_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
