<?xml version="1.0"?>
<package format="3">
  <name>px4_offboard_control</name>
  <version>0.1.0</version>
  <description>Perception-aware PX4 offboard control for the sprint drone prototype.</description>
  <maintainer email="dev@example.com">sprint_drone</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sprint_drone_msgs</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
