<?xml version="1.0"?>
<package format="3">
  <name>sprint_drone</name>
  <version>0.1.0</version>
  <description>Bringup package for the GPS-denied sprint drone prototype.</description>
  <maintainer email="dev@example.com">sprint_drone</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>grid_detector</exec_depend>
  <exec_depend>aruco_tracker</exec_depend>
  <exec_depend>visual_odometry</exec_depend>
  <exec_depend>sprint_planner</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>px4_offboard_control</exec_depend>
  <exec_depend>vertiport_detector</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
