cmake_minimum_required(VERSION 3.16)
project(sprint_drone_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/GridLines.msg"
  "msg/GridIntersections.msg"
  "msg/MarkerDetection.msg"
  "msg/MarkerDetectionList.msg"
  "msg/MarkerInfo.msg"
  "msg/MarkerList.msg"
  "msg/VelocityProfile.msg"
  DEPENDENCIES std_msgs geometry_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
