<?xml version="1.0"?>
<package format="3">
  <name>vertiport_detector</name>
  <version>0.1.0</version>
  <description>Vertiport color-blob detection and descent confidence filter for the sprint drone prototype.</description>
  <maintainer email="dev@example.com">sprint_drone</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
